--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -124,6 +124,11 @@ TABLE CONTENT
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     gap: 16px;
+    padding-right: 0px;
+  }
+
+  .industry-item{
+    padding-right:0px !important;
   }
 }
 
@@ -192,7 +197,10 @@ TABLE CONTENT
 @media only screen and (max-width: 479px) {
   .first-slider {
     margin: 0px !important;
-    padding: 20px;
+    padding-left: 10px !important;
+    
+    width:auto;
+    padding-right: 10px !important;
     padding-top: 100px;
     padding-bottom: 10px;
     margin-bottom: 0px;
