added "spotlight" title

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8522,6 +8522,7 @@ a.icon-socials:hover {
 
 .box-latest-news-2 {
   padding: 140px 0px;
+  background-color: #191919;
 }
 
 .box-button-slider-black .swiper-button-next-testimonials,
