--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -112,7 +112,8 @@ TABLE CONTENT
 @media only screen and (max-width: 767px) {
   .industry-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
+    padding-right: 0;
     gap: 16px;
   }
   .industry-container {
@@ -122,7 +123,7 @@ TABLE CONTENT
 @media only screen and (max-width: 479px) {
   .industry-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 16px;
     padding-right: 0px;
   }
