--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -40,11 +40,45 @@ TABLE CONTENT
 @import url(../css/plugins/carouselTicker.css);
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
-
-.text-black{
-  color:black
+.text-black {
+  color: black;
 }
 
+.section3_text_title {
+  font-weight: bold !important;
+  font-size: 20px !important;
+  color: black !important;
+}
+
+.section3_text_subtitle {
+  font-size: 40px;
+  font-weight: normal;
+}
+
+@media only screen and (max-width: 767px) {
+  .section3_text_title {
+    font-weight: bold !important;
+    font-size: 15px !important;
+    color: black !important;
+  }
+
+  .section3_text_subtitle {
+    font-size: 30px;
+    font-weight: normal;
+  }
+}
+@media only screen and (max-width: 479px) {
+  .section3_text_title {
+    font-weight: bold !important;
+    font-size: 10px !important;
+    color: black !important;
+  }
+
+  .section3_text_subtitle {
+    font-size: 20px;
+    font-weight: normal;
+  }
+}
 
 /* Office section */
 /* General Styling */
@@ -108,7 +142,8 @@ TABLE CONTENT
   margin-bottom: 10px;
 }
 
-.office-address, .office-hours {
+.office-address,
+.office-hours {
   font-size: 14px;
   color: #777;
   margin-bottom: 5px;
@@ -138,11 +173,6 @@ TABLE CONTENT
     flex: 1 1 100%; /* 1 column on smaller screens */
   }
 }
-
-
-
-
-
 
 /* Industry section */
 .industry-container {
@@ -233,8 +263,8 @@ TABLE CONTENT
     padding-right: 0px;
   }
 
-  .industry-item{
-    padding-right:0px !important;
+  .industry-item {
+    padding-right: 0px !important;
   }
 }
 
@@ -304,8 +334,8 @@ TABLE CONTENT
   .first-slider {
     margin: 0px !important;
     padding-left: 10px !important;
-    
-    width:auto;
+
+    width: auto;
     padding-right: 10px !important;
     padding-top: 100px;
     padding-bottom: 10px;
@@ -3346,8 +3376,8 @@ label {
 
 .card-features-6 {
   border-radius: 16px;
-  background-color: #C9C9C9;
-  border: 1px solid #C9C9C9;
+  background-color: #c9c9c9;
+  border: 1px solid #c9c9c9;
   padding: 32px 32px 35px 32px;
   color: #ffffff;
   margin-bottom: 30px;
@@ -8919,7 +8949,7 @@ a.icon-socials:hover {
 
 .box-our-offices {
   padding: 100px 0px 140px 0px;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   /* background-image: url(../imgs/page/about/bg-offices.png); */
   background-repeat: no-repeat;
   background-position: bottom right;
