--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -44,6 +44,10 @@ TABLE CONTENT
   color: black;
 }
 
+.office-title {
+  font-size: 32px;
+}
+
 .section3_text_title {
   font-weight: bold !important;
   font-size: 20px !important;
@@ -3381,6 +3385,7 @@ label {
   padding: 32px 32px 35px 32px;
   color: #ffffff;
   margin-bottom: 30px;
+  height: 350px;
 }
 .card-features-6 .card-image {
   margin-bottom: 15px;
@@ -3421,7 +3426,7 @@ label {
   border-radius: 16px;
   background-color: #1e1e1e;
   border: 1px solid #434445;
-  padding: 32px 32px 35px 32px;
+  padding: 40px 40px 40px 40px;
   color: #ffffff;
   margin-bottom: 30px;
 }
@@ -6876,11 +6881,12 @@ a.icon-socials:hover {
 }
 
 .box-grow {
-  background: url(../imgs/page/homepage6/bg-grow2.png) no-repeat right bottom;
+  /* background: url(../imgs/page/homepage6/bg-grow2.png) no-repeat right bottom; */
 }
 
 .box-grow-inner {
-  padding: 130px 0px;
+  /* padding: 130px 0px; */
+  padding-top: 60px;
   background: url(../imgs/page/homepage6/bg-grow3.png) no-repeat left top;
 }
 
@@ -8948,7 +8954,7 @@ a.icon-socials:hover {
 }
 
 .box-our-offices {
-  padding: 100px 0px 140px 0px;
+  padding: 10px 0px 100px 0px;
   background-color: #f5f5f5;
   /* background-image: url(../imgs/page/about/bg-offices.png); */
   background-repeat: no-repeat;
