--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6995,7 +6995,7 @@ a.icon-socials:hover {
 .box-grow-inner {
   /* padding: 130px 0px; */
   padding-top: 60px;
-  background: url(../imgs/page/homepage6/bg-grow3.png) no-repeat left top;
+  /* background: url(../imgs/page/homepage6/bg-grow3.png) no-repeat left top; */
 }
 
 .text-linear-3 {
