--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9064,7 +9064,7 @@ a.icon-socials:hover {
 
 .box-our-offices {
   padding: 10px 0px 100px 0px;
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
   /* background-image: url(../imgs/page/about/bg-offices.png); */
   background-repeat: no-repeat;
   background-position: bottom right;
