--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -39,6 +39,20 @@ TABLE CONTENT
 @import url(../css/plugins/perfect-scrollbar.css);
 @import url(../css/plugins/carouselTicker.css);
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Monda:wght@400..700&display=swap');
+
+.monda-font {
+  font-family: var(--tg-monda-font-family), sans-serif !important;
+}
+
+.learn_more_background{
+  /* style={{backgroundColor:"blue", borderRadius:"10px", padding:"10px", }} */
+  background-color:#5057E6;
+  border-radius: 10px;
+  padding: 10px;
+  width: 13%;
+}
+
 
 /* Services.css */
 
@@ -707,6 +721,7 @@ TABLE CONTENT
 
   .sections_heading {
     font-size: 30px !important;
+    
   }
   .sections_heading_desc {
     font-size: 20px !important;
