--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -39,20 +39,31 @@ TABLE CONTENT
 @import url(../css/plugins/perfect-scrollbar.css);
 @import url(../css/plugins/carouselTicker.css);
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Monda:wght@400..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Monda:wght@400..700&display=swap");
 
 .monda-font {
-  font-family: var(--tg-monda-font-family), sans-serif !important;
+  font-family: var(--font-monda) !important;
 }
 
-.learn_more_background{
+.learn_more_background {
   /* style={{backgroundColor:"blue", borderRadius:"10px", padding:"10px", }} */
-  background-color:#5057E6;
-  border-radius: 10px;
+  background-color: #5057e6;
+  border-radius: 15px;
   padding: 10px;
-  width: 13%;
+  width: 114px;
+  text-align: center;
+  font-weight: 600 !important;
+  font-size: 14px !important;
 }
 
+.card-header-custom {
+  background-color: white !important;
+}
+
+.card-custom {
+  border: none !important;
+  border-top: 2px solid rgba(92, 91, 91, 0.825) !important;
+}
 
 /* Services.css */
 
@@ -154,7 +165,8 @@ TABLE CONTENT
   }
 
   .service-title {
-    font-size: 0.9rem !important; /* Reduce card title size */
+    font-size: 0.8rem !important; /* Reduce card title size */
+    font-weight: 600 !important;
   }
 
   .view-button {
@@ -171,14 +183,14 @@ TABLE CONTENT
 }
 
 .section3_text_title {
-  font-weight: bold !important;
+  font-weight: 600 !important;
   font-size: 20px !important;
   color: black !important;
 }
 
 .section3_text_subtitle {
   font-size: 40px;
-  font-weight: normal;
+  font-weight: 400 !important;
 }
 
 @media only screen and (max-width: 767px) {
@@ -312,8 +324,8 @@ TABLE CONTENT
 }
 
 .industry-title {
-  font-size: 24px;
-  font-weight: bold;
+  font-size: 32px;
+  font-weight: normal;
   margin-bottom: 24px;
   padding-left: 25px;
 }
@@ -358,6 +370,7 @@ TABLE CONTENT
 
 .portfolio-heading {
   font-size: medium;
+  padding-top: 19px;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
@@ -714,6 +727,11 @@ TABLE CONTENT
   }
 }
 
+.sections_heading {
+  font-family: var(--font-monda) !important;
+  font-size: 64px;
+}
+
 @media only screen and (max-width: 567px) {
   .slider_imgs {
     height: 50vh;
@@ -721,7 +739,6 @@ TABLE CONTENT
 
   .sections_heading {
     font-size: 30px !important;
-    
   }
   .sections_heading_desc {
     font-size: 20px !important;
@@ -9047,7 +9064,7 @@ a.icon-socials:hover {
 
 .box-testimonials-4 {
   background-color: #191919;
-  padding: 142px 0px;
+  padding: 104px 0px;
 }
 
 .box-images-banner-6 {
