removed slider and view more
removed slider from :spotlight" and removed "view more" from manufacturing page services section

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -111,6 +111,7 @@ TABLE CONTENT
   height: 400px;
   object-fit: cover;
   filter: brightness(50%);
+  border-radius: 8px;
 }
 
 .service-overlay {
